tests/ui/ergonomic-clones/closure/print-verbose.stderr
error[E0382]: use of moved value: `c`
  --> $DIR/print-verbose.rs:22:5
   |
LL |     let c = to_fn_once(use || {
   |         - move occurs because `c` has type `{f<T>::{closure#0} closure_kind_ty=i32 closure_sig_as_fn_ptr_ty=extern "rust-call" fn(()) upvar_tys=(Foo<&'?9 str>, T)}`, which does not implement the `Copy` trait
...
LL |     c();
   |     --- `c` moved due to this call
LL |     c();
   |     ^ value used here after move
   |
note: this value implements `FnOnce`, which causes it to be moved when called
  --> $DIR/print-verbose.rs:21:5
   |
LL |     c();
   |     ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
